@@ -58,6 +58,8 @@ import org.apache.kafka.common.message.AlterReplicaLogDirsRequestData;
 import org.apache.kafka.common.message.AlterReplicaLogDirsRequestData.AlterReplicaLogDirTopic;
 import org.apache.kafka.common.message.AlterReplicaLogDirsRequestData.AlterReplicaLogDirTopicCollection;
 import org.apache.kafka.common.message.AlterReplicaLogDirsResponseData;
+import org.apache.kafka.common.message.AlterShareGroupOffsetsRequestData;
+import org.apache.kafka.common.message.AlterShareGroupOffsetsResponseData;
 import org.apache.kafka.common.message.AlterUserScramCredentialsRequestData;
 import org.apache.kafka.common.message.AlterUserScramCredentialsResponseData;
 import org.apache.kafka.common.message.ApiMessageType;
@@ -77,10 +79,6 @@ import org.apache.kafka.common.message.ConsumerGroupDescribeRequestData;
 import org.apache.kafka.common.message.ConsumerGroupDescribeResponseData;
 import org.apache.kafka.common.message.ConsumerGroupHeartbeatRequestData;
 import org.apache.kafka.common.message.ConsumerGroupHeartbeatResponseData;
-import org.apache.kafka.common.message.ControlledShutdownRequestData;
-import org.apache.kafka.common.message.ControlledShutdownResponseData;
-import org.apache.kafka.common.message.ControlledShutdownResponseData.RemainingPartition;
-import org.apache.kafka.common.message.ControlledShutdownResponseData.RemainingPartitionCollection;
 import org.apache.kafka.common.message.ControllerRegistrationRequestData;
 import org.apache.kafka.common.message.ControllerRegistrationResponseData;
 import org.apache.kafka.common.message.CreateAclsRequestData;
@@ -110,6 +108,8 @@ import org.apache.kafka.common.message.DeleteGroupsResponseData.DeletableGroupRe
 import org.apache.kafka.common.message.DeleteGroupsResponseData.DeletableGroupResultCollection;
 import org.apache.kafka.common.message.DeleteRecordsRequestData;
 import org.apache.kafka.common.message.DeleteRecordsResponseData;
+import org.apache.kafka.common.message.DeleteShareGroupOffsetsRequestData;
+import org.apache.kafka.common.message.DeleteShareGroupOffsetsResponseData;
 import org.apache.kafka.common.message.DeleteShareGroupStateRequestData;
 import org.apache.kafka.common.message.DeleteShareGroupStateResponseData;
 import org.apache.kafka.common.message.DeleteTopicsRequestData;
@@ -136,6 +136,8 @@ import org.apache.kafka.common.message.DescribeProducersRequestData;
 import org.apache.kafka.common.message.DescribeProducersResponseData;
 import org.apache.kafka.common.message.DescribeQuorumRequestData;
 import org.apache.kafka.common.message.DescribeQuorumResponseData;
+import org.apache.kafka.common.message.DescribeShareGroupOffsetsRequestData;
+import org.apache.kafka.common.message.DescribeShareGroupOffsetsResponseData;
 import org.apache.kafka.common.message.DescribeTopicPartitionsRequestData;
 import org.apache.kafka.common.message.DescribeTopicPartitionsResponseData;
 import org.apache.kafka.common.message.DescribeTransactionsRequestData;
@@ -171,9 +173,6 @@ import org.apache.kafka.common.message.InitializeShareGroupStateResponseData;
 import org.apache.kafka.common.message.JoinGroupRequestData;
 import org.apache.kafka.common.message.JoinGroupResponseData;
 import org.apache.kafka.common.message.JoinGroupResponseData.JoinGroupResponseMember;
-import org.apache.kafka.common.message.LeaderAndIsrRequestData.LeaderAndIsrPartitionState;
-import org.apache.kafka.common.message.LeaderAndIsrResponseData;
-import org.apache.kafka.common.message.LeaderAndIsrResponseData.LeaderAndIsrTopicErrorCollection;
 import org.apache.kafka.common.message.LeaveGroupRequestData.MemberIdentity;
 import org.apache.kafka.common.message.LeaveGroupResponseData;
 import org.apache.kafka.common.message.ListClientMetricsResourcesRequestData;
@@ -230,9 +229,6 @@ import org.apache.kafka.common.message.ShareGroupDescribeRequestData;
 import org.apache.kafka.common.message.ShareGroupDescribeResponseData;
 import org.apache.kafka.common.message.ShareGroupHeartbeatRequestData;
 import org.apache.kafka.common.message.ShareGroupHeartbeatResponseData;
-import org.apache.kafka.common.message.StopReplicaRequestData.StopReplicaPartitionState;
-import org.apache.kafka.common.message.StopReplicaRequestData.StopReplicaTopicState;
-import org.apache.kafka.common.message.StopReplicaResponseData;
 import org.apache.kafka.common.message.StreamsGroupDescribeRequestData;
 import org.apache.kafka.common.message.StreamsGroupDescribeResponseData;
 import org.apache.kafka.common.message.StreamsGroupHeartbeatRequestData;
@@ -244,17 +240,12 @@ import org.apache.kafka.common.message.UnregisterBrokerRequestData;
 import org.apache.kafka.common.message.UnregisterBrokerResponseData;
 import org.apache.kafka.common.message.UpdateFeaturesRequestData;
 import org.apache.kafka.common.message.UpdateFeaturesResponseData;
-import org.apache.kafka.common.message.UpdateMetadataRequestData.UpdateMetadataBroker;
-import org.apache.kafka.common.message.UpdateMetadataRequestData.UpdateMetadataEndpoint;
-import org.apache.kafka.common.message.UpdateMetadataRequestData.UpdateMetadataPartitionState;
-import org.apache.kafka.common.message.UpdateMetadataResponseData;
 import org.apache.kafka.common.message.UpdateRaftVoterRequestData;
 import org.apache.kafka.common.message.UpdateRaftVoterResponseData;
 import org.apache.kafka.common.message.VoteRequestData;
 import org.apache.kafka.common.message.VoteResponseData;
 import org.apache.kafka.common.message.WriteShareGroupStateRequestData;
 import org.apache.kafka.common.message.WriteShareGroupStateResponseData;
-import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.network.Send;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.ByteBufferAccessor;
@@ -300,14 +291,12 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static org.apache.kafka.common.protocol.ApiKeys.API_VERSIONS;
-import static org.apache.kafka.common.protocol.ApiKeys.CONTROLLED_SHUTDOWN;
 import static org.apache.kafka.common.protocol.ApiKeys.CREATE_PARTITIONS;
 import static org.apache.kafka.common.protocol.ApiKeys.CREATE_TOPICS;
 import static org.apache.kafka.common.protocol.ApiKeys.DELETE_ACLS;
@@ -325,10 +314,8 @@ import static org.apache.kafka.common.protocol.ApiKeys.METADATA;
 import static org.apache.kafka.common.protocol.ApiKeys.OFFSET_FETCH;
 import static org.apache.kafka.common.protocol.ApiKeys.PRODUCE;
 import static org.apache.kafka.common.protocol.ApiKeys.SASL_AUTHENTICATE;
-import static org.apache.kafka.common.protocol.ApiKeys.STOP_REPLICA;
 import static org.apache.kafka.common.protocol.ApiKeys.SYNC_GROUP;
-import static org.apache.kafka.common.protocol.ApiKeys.UPDATE_METADATA;
-import static org.apache.kafka.common.protocol.ApiKeys.WRITE_TXN_MARKERS;
+import static org.apache.kafka.common.protocol.ApiKeys.UNREGISTER_BROKER;
 import static org.apache.kafka.common.requests.EndTxnRequest.LAST_STABLE_VERSION_BEFORE_TRANSACTION_V2;
 import static org.apache.kafka.common.requests.FetchMetadata.INVALID_SESSION_ID;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -349,11 +336,13 @@ public class RequestResponseTest {
     public void testSerialization() {
         Map<ApiKeys, List<Short>> toSkip = new HashMap<>();
         // It's not possible to create a MetadataRequest v0 via the builder
-        toSkip.put(METADATA, singletonList((short) 0));
+        toSkip.put(METADATA, List.of((short) 0));
         // DescribeLogDirsResponse v0, v1 and v2 don't have a top level error field
-        toSkip.put(DESCRIBE_LOG_DIRS, Arrays.asList((short) 0, (short) 1, (short) 2));
+        toSkip.put(DESCRIBE_LOG_DIRS, List.of((short) 0, (short) 1, (short) 2));
         // ElectLeaders v0 does not have a top level error field, when accessing it, it defaults to NONE
-        toSkip.put(ELECT_LEADERS, singletonList((short) 0));
+        toSkip.put(ELECT_LEADERS, List.of((short) 0));
+        // UnregisterBroker v0 contains the error message in the response
+        toSkip.put(UNREGISTER_BROKER, List.of((short) 0));
 
         for (ApiKeys apikey : ApiKeys.values()) {
             for (short version : apikey.allVersions()) {
@@ -395,19 +384,9 @@ public class RequestResponseTest {
             new NotCoordinatorException("Not Coordinator"));
         checkErrorResponse(createOffsetFetchRequestWithMultipleGroups((short) 8, true),
             new NotCoordinatorException("Not Coordinator"));
-        // StopReplica
-        for (short version : STOP_REPLICA.allVersions()) {
-            checkRequest(createStopReplicaRequest(version, false));
-            checkErrorResponse(createStopReplicaRequest(version, false), unknownServerException);
-        }
         // CreatePartitions
         for (short version : CREATE_PARTITIONS.allVersions()) {
             checkRequest(createCreatePartitionsRequestWithAssignments(version));
-        }
-        // UpdateMetadata
-        for (short version : UPDATE_METADATA.allVersions()) {
-            checkRequest(createUpdateMetadataRequest(version, null));
-            checkErrorResponse(createUpdateMetadataRequest(version, null), unknownServerException);
         }
         // LeaderForEpoch
         checkRequest(createLeaderEpochRequestForConsumer());
@@ -434,7 +413,7 @@ public class RequestResponseTest {
     public void testApiVersionsSerialization() {
         for (short version : API_VERSIONS.allVersions()) {
             checkErrorResponse(createApiVersionRequest(version), new UnsupportedVersionException("Not Supported"));
-            checkResponse(TestUtils.defaultApiVersionsResponse(ApiMessageType.ListenerType.ZK_BROKER), version);
+            checkResponse(TestUtils.defaultApiVersionsResponse(ApiMessageType.ListenerType.BROKER), version);
         }
     }
 
@@ -550,11 +529,6 @@ public class RequestResponseTest {
     public void fetchResponseVersionTest() {
         Uuid id = Uuid.randomUuid();
         MemoryRecords records = MemoryRecords.readableRecords(ByteBuffer.allocate(10));
-        FetchResponseData.PartitionData partitionData = new FetchResponseData.PartitionData()
-                .setPartitionIndex(0)
-                .setHighWatermark(1000000)
-                .setLogStartOffset(-1)
-                .setRecords(records);
         LinkedHashMap<TopicIdPartition, FetchResponseData.PartitionData> idResponseData = new LinkedHashMap<>();
         idResponseData.put(new TopicIdPartition(id, new TopicPartition("test", 0)),
                 new FetchResponseData.PartitionData()
@@ -721,7 +695,7 @@ public class RequestResponseTest {
         assertEquals(requestHeader, parsedHeader);
 
         RequestAndSize parsedRequest = AbstractRequest.parseRequest(
-            CREATE_TOPICS, requestVersion, serializedRequest);
+            CREATE_TOPICS, requestVersion, new ByteBufferAccessor(serializedRequest));
 
         assertEquals(createTopicsRequest.data(), parsedRequest.request.data());
     }
@@ -866,8 +840,25 @@ public class RequestResponseTest {
         }
     }
 
+    @Test
+    public void testUnregisterBrokerResponseWithUnknownServerError() {
+        UnregisterBrokerRequest request = new UnregisterBrokerRequest.Builder(
+            new UnregisterBrokerRequestData()
+        ).build((short) 0);
+        String customerErrorMessage = "customer error message";
+        
+        UnregisterBrokerResponse response = request.getErrorResponse(
+            0, 
+            new RuntimeException(customerErrorMessage)
+        );
+
+        assertEquals(0, response.throttleTimeMs());
+        assertEquals(Errors.UNKNOWN_SERVER_ERROR.code(), response.data().errorCode());
+        assertEquals(customerErrorMessage, response.data().errorMessage());
+    }
+
     private ApiVersionsResponse defaultApiVersionsResponse() {
-        return TestUtils.defaultApiVersionsResponse(ApiMessageType.ListenerType.ZK_BROKER);
+        return TestUtils.defaultApiVersionsResponse(ApiMessageType.ListenerType.BROKER);
     }
 
     @Test
@@ -933,7 +924,6 @@ public class RequestResponseTest {
         assertEquals(1, createApiVersionResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createBrokerHeartbeatResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createBrokerRegistrationResponse().errorCounts().get(Errors.NONE));
-        assertEquals(1, createControlledShutdownResponse().errorCounts().get(Errors.NONE));
         assertEquals(2, createCreateAclsResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createCreatePartitionsResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createCreateTokenResponse().errorCounts().get(Errors.NONE));
@@ -956,8 +946,6 @@ public class RequestResponseTest {
         assertEquals(1, createHeartBeatResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createIncrementalAlterConfigsResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createJoinGroupResponse(JOIN_GROUP.latestVersion()).errorCounts().get(Errors.NONE));
-        assertEquals(2, createLeaderAndIsrResponse((short) 4).errorCounts().get(Errors.NONE));
-        assertEquals(2, createLeaderAndIsrResponse((short) 5).errorCounts().get(Errors.NONE));
         assertEquals(3, createLeaderEpochResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createLeaveGroupResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createListGroupsResponse(LIST_GROUPS.latestVersion()).errorCounts().get(Errors.NONE));
@@ -971,10 +959,8 @@ public class RequestResponseTest {
         assertEquals(1, createRenewTokenResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createSaslAuthenticateResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createSaslHandshakeResponse().errorCounts().get(Errors.NONE));
-        assertEquals(2, createStopReplicaResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createSyncGroupResponse(SYNC_GROUP.latestVersion()).errorCounts().get(Errors.NONE));
         assertEquals(1, createTxnOffsetCommitResponse().errorCounts().get(Errors.NONE));
-        assertEquals(1, createUpdateMetadataResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createWriteTxnMarkersResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createShareGroupHeartbeatResponse().errorCounts().get(Errors.NONE));
         assertEquals(1, createShareGroupDescribeResponse().errorCounts().get(Errors.NONE));
@@ -988,10 +974,6 @@ public class RequestResponseTest {
             case FETCH: return createFetchRequest(version);
             case LIST_OFFSETS: return createListOffsetRequest(version);
             case METADATA: return createMetadataRequest(version, singletonList("topic1"));
-            case LEADER_AND_ISR: return createLeaderAndIsrRequest(version);
-            case STOP_REPLICA: return createStopReplicaRequest(version, true);
-            case UPDATE_METADATA: return createUpdateMetadataRequest(version, "rack1");
-            case CONTROLLED_SHUTDOWN: return createControlledShutdownRequest(version);
             case OFFSET_COMMIT: return createOffsetCommitRequest(version);
             case OFFSET_FETCH: return createOffsetFetchRequest(version, true);
             case FIND_COORDINATOR: return createFindCoordinatorRequest(version);
@@ -1074,6 +1056,9 @@ public class RequestResponseTest {
             case READ_SHARE_GROUP_STATE_SUMMARY: return createReadShareGroupStateSummaryRequest(version);
             case STREAMS_GROUP_HEARTBEAT: return createStreamsGroupHeartbeatRequest(version);
             case STREAMS_GROUP_DESCRIBE: return createStreamsGroupDescribeRequest(version);
+            case DESCRIBE_SHARE_GROUP_OFFSETS: return createDescribeShareGroupOffsetsRequest(version);
+            case ALTER_SHARE_GROUP_OFFSETS: return createAlterShareGroupOffsetsRequest(version);
+            case DELETE_SHARE_GROUP_OFFSETS: return createDeleteShareGroupOffsetsRequest(version);
             default: throw new IllegalArgumentException("Unknown API key " + apikey);
         }
     }
@@ -1084,10 +1069,6 @@ public class RequestResponseTest {
             case FETCH: return createFetchResponse(version);
             case LIST_OFFSETS: return createListOffsetResponse(version);
             case METADATA: return createMetadataResponse();
-            case LEADER_AND_ISR: return createLeaderAndIsrResponse(version);
-            case STOP_REPLICA: return createStopReplicaResponse();
-            case UPDATE_METADATA: return createUpdateMetadataResponse();
-            case CONTROLLED_SHUTDOWN: return createControlledShutdownResponse();
             case OFFSET_COMMIT: return createOffsetCommitResponse();
             case OFFSET_FETCH: return createOffsetFetchResponse(version);
             case FIND_COORDINATOR: return createFindCoordinatorResponse(version);
@@ -1136,7 +1117,7 @@ public class RequestResponseTest {
             case BEGIN_QUORUM_EPOCH: return createBeginQuorumEpochResponse();
             case END_QUORUM_EPOCH: return createEndQuorumEpochResponse();
             case DESCRIBE_QUORUM: return createDescribeQuorumResponse();
-            case ALTER_PARTITION: return createAlterPartitionResponse(version);
+            case ALTER_PARTITION: return createAlterPartitionResponse();
             case UPDATE_FEATURES: return createUpdateFeaturesResponse();
             case ENVELOPE: return createEnvelopeResponse();
             case FETCH_SNAPSHOT: return createFetchSnapshotResponse();
@@ -1170,6 +1151,9 @@ public class RequestResponseTest {
             case READ_SHARE_GROUP_STATE_SUMMARY: return createReadShareGroupStateSummaryResponse();
             case STREAMS_GROUP_HEARTBEAT: return createStreamsGroupHeartbeatResponse();
             case STREAMS_GROUP_DESCRIBE: return createStreamsGroupDescribeResponse();
+            case DESCRIBE_SHARE_GROUP_OFFSETS: return createDescribeShareGroupOffsetsResponse();
+            case ALTER_SHARE_GROUP_OFFSETS: return createAlterShareGroupOffsetsResponse();
+            case DELETE_SHARE_GROUP_OFFSETS: return createDeleteShareGroupOffsetsResponse();
             default: throw new IllegalArgumentException("Unknown API key " + apikey);
         }
     }
@@ -1733,41 +1717,31 @@ public class RequestResponseTest {
             .setPartitionIndex(1)
             .setPartitionEpoch(2)
             .setLeaderEpoch(3)
-            .setNewIsrWithEpochs(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(asList(1, 2)));
-
-        if (version >= 1) {
-            // Use the none default value; 1 - RECOVERING
-            partitionData.setLeaderRecoveryState((byte) 1);
-        }
+            .setNewIsrWithEpochs(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(asList(1, 2)))
+            .setLeaderRecoveryState((byte) 1); // non-default value
 
         AlterPartitionRequestData data = new AlterPartitionRequestData()
             .setBrokerEpoch(123L)
             .setBrokerId(1)
             .setTopics(singletonList(new AlterPartitionRequestData.TopicData()
-                .setTopicName("topic1")
                 .setTopicId(Uuid.randomUuid())
                 .setPartitions(singletonList(partitionData))));
         return new AlterPartitionRequest.Builder(data).build(version);
     }
 
-    private AlterPartitionResponse createAlterPartitionResponse(int version) {
+    private AlterPartitionResponse createAlterPartitionResponse() {
         AlterPartitionResponseData.PartitionData partitionData = new AlterPartitionResponseData.PartitionData()
             .setPartitionEpoch(1)
             .setIsr(asList(0, 1, 2))
             .setErrorCode(Errors.NONE.code())
             .setLeaderEpoch(2)
-            .setLeaderId(3);
-
-        if (version >= 1) {
-            // Use the none default value; 1 - RECOVERING
-            partitionData.setLeaderRecoveryState((byte) 1);
-        }
+            .setLeaderId(3)
+            .setLeaderRecoveryState((byte) 1); // non-default value
 
         AlterPartitionResponseData data = new AlterPartitionResponseData()
                 .setErrorCode(Errors.NONE.code())
                 .setThrottleTimeMs(123)
                 .setTopics(singletonList(new AlterPartitionResponseData.TopicData()
-                    .setTopicName("topic1")
                     .setTopicId(Uuid.randomUuid())
                     .setPartitions(singletonList(partitionData))));
         return new AlterPartitionResponse(data);
@@ -1963,11 +1937,11 @@ public class RequestResponseTest {
         // Check for equality of the ByteBuffer only if indicated (it is likely to fail if any of the fields
         // in the request is a HashMap with multiple elements since ordering of the elements may vary)
         try {
-            ByteBuffer serializedBytes = req.serialize();
+            ByteBufferAccessor serializedBytes = req.serialize();
             AbstractRequest deserialized = AbstractRequest.parseRequest(req.apiKey(), req.version(), serializedBytes).request;
-            ByteBuffer serializedBytes2 = deserialized.serialize();
-            serializedBytes.rewind();
-            assertEquals(serializedBytes, serializedBytes2, "Request " + req + "failed equality test");
+            ByteBufferAccessor serializedBytes2 = deserialized.serialize();
+            serializedBytes.buffer().rewind();
+            assertEquals(serializedBytes.buffer(), serializedBytes2.buffer(), "Request " + req + "failed equality test");
         } catch (Exception e) {
             throw new RuntimeException("Failed to deserialize request " + req + " with type " + req.getClass(), e);
         }
@@ -2062,7 +2036,8 @@ public class RequestResponseTest {
                         .setPartitionIndex(1)
                         .setHighWatermark(1000000)
                         .setLogStartOffset(0)
-                        .setAbortedTransactions(abortedTransactions));
+                        .setAbortedTransactions(abortedTransactions)
+                        .setRecords(MemoryRecords.EMPTY));
         return FetchResponse.parse(FetchResponse.of(Errors.NONE, 25, sessionId,
             responseData).serialize(FETCH.latestVersion()), FETCH.latestVersion());
     }
@@ -2086,7 +2061,8 @@ public class RequestResponseTest {
                         .setPartitionIndex(1)
                         .setHighWatermark(1000000)
                         .setLogStartOffset(0)
-                        .setAbortedTransactions(abortedTransactions));
+                        .setAbortedTransactions(abortedTransactions)
+                        .setRecords(MemoryRecords.EMPTY));
         return FetchResponse.parse(FetchResponse.of(Errors.NONE, 25, INVALID_SESSION_ID,
             responseData).serialize(FETCH.latestVersion()), FETCH.latestVersion());
     }
@@ -2527,224 +2503,6 @@ public class RequestResponseTest {
                 10000, RecordBatch.NO_TIMESTAMP, 100, singletonList(new ProduceResponse.RecordError(0, "error message")),
                 "global error message"));
         return new ProduceResponse(responseData, 0);
-    }
-
-    private StopReplicaRequest createStopReplicaRequest(short version, boolean deletePartitions) {
-        List<StopReplicaTopicState> topicStates = new ArrayList<>();
-        StopReplicaTopicState topic1 = new StopReplicaTopicState()
-            .setTopicName("topic1")
-            .setPartitionStates(singletonList(new StopReplicaPartitionState()
-                .setPartitionIndex(0)
-                .setLeaderEpoch(1)
-                .setDeletePartition(deletePartitions)));
-        topicStates.add(topic1);
-        StopReplicaTopicState topic2 = new StopReplicaTopicState()
-            .setTopicName("topic2")
-            .setPartitionStates(singletonList(new StopReplicaPartitionState()
-                .setPartitionIndex(1)
-                .setLeaderEpoch(2)
-                .setDeletePartition(deletePartitions)));
-        topicStates.add(topic2);
-
-        return new StopReplicaRequest.Builder(version, 0, 1, 0,
-            deletePartitions, topicStates).build(version);
-    }
-
-    private StopReplicaResponse createStopReplicaResponse() {
-        List<StopReplicaResponseData.StopReplicaPartitionError> partitions = new ArrayList<>();
-        partitions.add(new StopReplicaResponseData.StopReplicaPartitionError()
-            .setTopicName("test")
-            .setPartitionIndex(0)
-            .setErrorCode(Errors.NONE.code()));
-        return new StopReplicaResponse(new StopReplicaResponseData()
-            .setErrorCode(Errors.NONE.code())
-            .setPartitionErrors(partitions));
-    }
-
-    private ControlledShutdownRequest createControlledShutdownRequest(short version) {
-        ControlledShutdownRequestData data = new ControlledShutdownRequestData()
-                .setBrokerId(10)
-                .setBrokerEpoch(0L);
-        return new ControlledShutdownRequest.Builder(
-                data,
-                CONTROLLED_SHUTDOWN.latestVersion()).build(version);
-    }
-
-    private ControlledShutdownResponse createControlledShutdownResponse() {
-        RemainingPartition p1 = new RemainingPartition()
-                .setTopicName("test2")
-                .setPartitionIndex(5);
-        RemainingPartition p2 = new RemainingPartition()
-                .setTopicName("test1")
-                .setPartitionIndex(10);
-        RemainingPartitionCollection pSet = new RemainingPartitionCollection();
-        pSet.add(p1);
-        pSet.add(p2);
-        ControlledShutdownResponseData data = new ControlledShutdownResponseData()
-                .setErrorCode(Errors.NONE.code())
-                .setRemainingPartitions(pSet);
-        return new ControlledShutdownResponse(data);
-    }
-
-    private LeaderAndIsrRequest createLeaderAndIsrRequest(short version) {
-        List<LeaderAndIsrPartitionState> partitionStates = new ArrayList<>();
-        List<Integer> isr = asList(1, 2);
-        List<Integer> replicas = asList(1, 2, 3, 4);
-        partitionStates.add(new LeaderAndIsrPartitionState()
-            .setTopicName("topic5")
-            .setPartitionIndex(105)
-            .setControllerEpoch(0)
-            .setLeader(2)
-            .setLeaderEpoch(1)
-            .setIsr(isr)
-            .setPartitionEpoch(2)
-            .setReplicas(replicas)
-            .setIsNew(false));
-        partitionStates.add(new LeaderAndIsrPartitionState()
-            .setTopicName("topic5")
-            .setPartitionIndex(1)
-            .setControllerEpoch(1)
-            .setLeader(1)
-            .setLeaderEpoch(1)
-            .setIsr(isr)
-            .setPartitionEpoch(2)
-            .setReplicas(replicas)
-            .setIsNew(false));
-        partitionStates.add(new LeaderAndIsrPartitionState()
-            .setTopicName("topic20")
-            .setPartitionIndex(1)
-            .setControllerEpoch(1)
-            .setLeader(0)
-            .setLeaderEpoch(1)
-            .setIsr(isr)
-            .setPartitionEpoch(2)
-            .setReplicas(replicas)
-            .setIsNew(false));
-
-        Set<Node> leaders = Set.of(
-                new Node(0, "test0", 1223),
-                new Node(1, "test1", 1223)
-        );
-
-        Map<String, Uuid> topicIds = new HashMap<>();
-        topicIds.put("topic5", Uuid.randomUuid());
-        topicIds.put("topic20", Uuid.randomUuid());
-
-        return new LeaderAndIsrRequest.Builder(version, 1, 10, 0,
-                partitionStates, topicIds, leaders).build();
-    }
-
-    private LeaderAndIsrResponse createLeaderAndIsrResponse(short version) {
-        if (version < 5) {
-            List<LeaderAndIsrResponseData.LeaderAndIsrPartitionError> partitions = new ArrayList<>();
-            partitions.add(new LeaderAndIsrResponseData.LeaderAndIsrPartitionError()
-                    .setTopicName("test")
-                    .setPartitionIndex(0)
-                    .setErrorCode(Errors.NONE.code()));
-            return new LeaderAndIsrResponse(new LeaderAndIsrResponseData()
-                    .setErrorCode(Errors.NONE.code())
-                    .setPartitionErrors(partitions), version);
-        } else {
-            List<LeaderAndIsrResponseData.LeaderAndIsrPartitionError> partition = singletonList(
-                    new LeaderAndIsrResponseData.LeaderAndIsrPartitionError()
-                    .setPartitionIndex(0)
-                    .setErrorCode(Errors.NONE.code()));
-            LeaderAndIsrTopicErrorCollection topics = new LeaderAndIsrTopicErrorCollection();
-            topics.add(new LeaderAndIsrResponseData.LeaderAndIsrTopicError()
-                    .setTopicId(Uuid.randomUuid())
-                    .setPartitionErrors(partition));
-            return new LeaderAndIsrResponse(new LeaderAndIsrResponseData()
-                    .setTopics(topics), version);
-        }
-    }
-
-    private UpdateMetadataRequest createUpdateMetadataRequest(short version, String rack) {
-        List<UpdateMetadataPartitionState> partitionStates = new ArrayList<>();
-        List<Integer> isr = asList(1, 2);
-        List<Integer> replicas = asList(1, 2, 3, 4);
-        List<Integer> offlineReplicas = emptyList();
-        partitionStates.add(new UpdateMetadataPartitionState()
-            .setTopicName("topic5")
-            .setPartitionIndex(105)
-            .setControllerEpoch(0)
-            .setLeader(2)
-            .setLeaderEpoch(1)
-            .setIsr(isr)
-            .setZkVersion(2)
-            .setReplicas(replicas)
-            .setOfflineReplicas(offlineReplicas));
-        partitionStates.add(new UpdateMetadataPartitionState()
-                .setTopicName("topic5")
-                .setPartitionIndex(1)
-                .setControllerEpoch(1)
-                .setLeader(1)
-                .setLeaderEpoch(1)
-                .setIsr(isr)
-                .setZkVersion(2)
-                .setReplicas(replicas)
-                .setOfflineReplicas(offlineReplicas));
-        partitionStates.add(new UpdateMetadataPartitionState()
-                .setTopicName("topic20")
-                .setPartitionIndex(1)
-                .setControllerEpoch(1)
-                .setLeader(0)
-                .setLeaderEpoch(1)
-                .setIsr(isr)
-                .setZkVersion(2)
-                .setReplicas(replicas)
-                .setOfflineReplicas(offlineReplicas));
-
-        Map<String, Uuid> topicIds = new HashMap<>();
-        if (version > 6) {
-            topicIds.put("topic5", Uuid.randomUuid());
-            topicIds.put("topic20", Uuid.randomUuid());
-        }
-
-        SecurityProtocol plaintext = SecurityProtocol.PLAINTEXT;
-        List<UpdateMetadataEndpoint> endpoints1 = new ArrayList<>();
-        endpoints1.add(new UpdateMetadataEndpoint()
-            .setHost("host1")
-            .setPort(1223)
-            .setSecurityProtocol(plaintext.id)
-            .setListener(ListenerName.forSecurityProtocol(plaintext).value()));
-
-        List<UpdateMetadataEndpoint> endpoints2 = new ArrayList<>();
-        endpoints2.add(new UpdateMetadataEndpoint()
-            .setHost("host1")
-            .setPort(1244)
-            .setSecurityProtocol(plaintext.id)
-            .setListener(ListenerName.forSecurityProtocol(plaintext).value()));
-        if (version > 0) {
-            SecurityProtocol ssl = SecurityProtocol.SSL;
-            endpoints2.add(new UpdateMetadataEndpoint()
-                .setHost("host2")
-                .setPort(1234)
-                .setSecurityProtocol(ssl.id)
-                .setListener(ListenerName.forSecurityProtocol(ssl).value()));
-            endpoints2.add(new UpdateMetadataEndpoint()
-                .setHost("host2")
-                .setPort(1334)
-                .setSecurityProtocol(ssl.id));
-            if (version >= 3)
-                endpoints2.get(1).setListener("CLIENT");
-        }
-
-        List<UpdateMetadataBroker> liveBrokers = asList(
-            new UpdateMetadataBroker()
-                .setId(0)
-                .setEndpoints(endpoints1)
-                .setRack(rack),
-            new UpdateMetadataBroker()
-                .setId(1)
-                .setEndpoints(endpoints2)
-                .setRack(rack)
-        );
-        return new UpdateMetadataRequest.Builder(version, 1, 10, 0, partitionStates,
-            liveBrokers, topicIds).build();
-    }
-
-    private UpdateMetadataResponse createUpdateMetadataResponse() {
-        return new UpdateMetadataResponse(new UpdateMetadataResponseData().setErrorCode(Errors.NONE.code()));
     }
 
     private SaslHandshakeRequest createSaslHandshakeRequest(short version) {
@@ -3837,120 +3595,190 @@ public class RequestResponseTest {
 
     private InitializeShareGroupStateRequest createInitializeShareGroupStateRequest(short version) {
         InitializeShareGroupStateRequestData data = new InitializeShareGroupStateRequestData()
-                .setGroupId("group")
-                .setTopics(Collections.singletonList(new InitializeShareGroupStateRequestData.InitializeStateData()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new InitializeShareGroupStateRequestData.PartitionData()
-                                .setPartition(0)
-                                .setStateEpoch(0)
-                                .setStartOffset(0)))));
+            .setGroupId("group")
+            .setTopics(Collections.singletonList(new InitializeShareGroupStateRequestData.InitializeStateData()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new InitializeShareGroupStateRequestData.PartitionData()
+                    .setPartition(0)
+                    .setStateEpoch(0)
+                    .setStartOffset(0)))));
         return new InitializeShareGroupStateRequest.Builder(data).build(version);
     }
 
     private InitializeShareGroupStateResponse createInitializeShareGroupStateResponse() {
         InitializeShareGroupStateResponseData data = new InitializeShareGroupStateResponseData();
         data.setResults(Collections.singletonList(new InitializeShareGroupStateResponseData.InitializeStateResult()
-                .setTopicId(Uuid.randomUuid())
-                .setPartitions(Collections.singletonList(new InitializeShareGroupStateResponseData.PartitionResult()
-                        .setPartition(0)
-                        .setErrorCode(Errors.NONE.code())))));
+            .setTopicId(Uuid.randomUuid())
+            .setPartitions(Collections.singletonList(new InitializeShareGroupStateResponseData.PartitionResult()
+                .setPartition(0)
+                .setErrorCode(Errors.NONE.code())))));
         return new InitializeShareGroupStateResponse(data);
     }
 
     private ReadShareGroupStateRequest createReadShareGroupStateRequest(short version) {
         ReadShareGroupStateRequestData data = new ReadShareGroupStateRequestData()
-                .setGroupId("group")
-                .setTopics(Collections.singletonList(new ReadShareGroupStateRequestData.ReadStateData()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new ReadShareGroupStateRequestData.PartitionData()
-                                .setPartition(0)))));
+            .setGroupId("group")
+            .setTopics(Collections.singletonList(new ReadShareGroupStateRequestData.ReadStateData()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new ReadShareGroupStateRequestData.PartitionData()
+                    .setPartition(0)))));
         return new ReadShareGroupStateRequest.Builder(data).build(version);
     }
 
     private ReadShareGroupStateResponse createReadShareGroupStateResponse() {
         ReadShareGroupStateResponseData data = new ReadShareGroupStateResponseData()
-                .setResults(Collections.singletonList(new ReadShareGroupStateResponseData.ReadStateResult()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
-                                .setPartition(0)
-                                .setErrorCode(Errors.NONE.code())
-                                .setStateEpoch(0)
-                                .setStartOffset(0)
-                                .setStateBatches(Collections.singletonList(new ReadShareGroupStateResponseData.StateBatch()
-                                        .setFirstOffset(0)
-                                        .setLastOffset(0)
-                                        .setDeliveryState((byte) 0x0)
-                                        .setDeliveryCount((short) 0)))))));
+            .setResults(Collections.singletonList(new ReadShareGroupStateResponseData.ReadStateResult()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
+                    .setPartition(0)
+                    .setErrorCode(Errors.NONE.code())
+                    .setStateEpoch(0)
+                    .setStartOffset(0)
+                    .setStateBatches(Collections.singletonList(new ReadShareGroupStateResponseData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(0)
+                        .setDeliveryState((byte) 0x0)
+                        .setDeliveryCount((short) 0)))))));
         return new ReadShareGroupStateResponse(data);
     }
 
     private WriteShareGroupStateRequest createWriteShareGroupStateRequest(short version) {
         WriteShareGroupStateRequestData data = new WriteShareGroupStateRequestData()
-                .setGroupId("group")
-                .setTopics(Collections.singletonList(new WriteShareGroupStateRequestData.WriteStateData()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new WriteShareGroupStateRequestData.PartitionData()
-                                .setPartition(0)
-                                .setStateEpoch(0)
-                                .setStartOffset(0)
-                                .setStateBatches(singletonList(new WriteShareGroupStateRequestData.StateBatch()
-                                        .setFirstOffset(0)
-                                        .setLastOffset(0)
-                                        .setDeliveryState((byte) 0x0)
-                                        .setDeliveryCount((short) 0)))))));
+            .setGroupId("group")
+            .setTopics(Collections.singletonList(new WriteShareGroupStateRequestData.WriteStateData()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new WriteShareGroupStateRequestData.PartitionData()
+                    .setPartition(0)
+                    .setStateEpoch(0)
+                    .setStartOffset(0)
+                    .setStateBatches(singletonList(new WriteShareGroupStateRequestData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(0)
+                        .setDeliveryState((byte) 0x0)
+                        .setDeliveryCount((short) 0)))))));
         return new WriteShareGroupStateRequest.Builder(data).build(version);
     }
 
     private WriteShareGroupStateResponse createWriteShareGroupStateResponse() {
         WriteShareGroupStateResponseData data = new WriteShareGroupStateResponseData()
-                .setResults(Collections.singletonList(new WriteShareGroupStateResponseData.WriteStateResult()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
-                                .setPartition(0)
-                                .setErrorCode(Errors.NONE.code())))));
+            .setResults(Collections.singletonList(new WriteShareGroupStateResponseData.WriteStateResult()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(0)
+                    .setErrorCode(Errors.NONE.code())))));
         return new WriteShareGroupStateResponse(data);
     }
 
     private DeleteShareGroupStateRequest createDeleteShareGroupStateRequest(short version) {
         DeleteShareGroupStateRequestData data = new DeleteShareGroupStateRequestData()
-                .setGroupId("group")
-                .setTopics(Collections.singletonList(new DeleteShareGroupStateRequestData.DeleteStateData()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new DeleteShareGroupStateRequestData.PartitionData()
-                                .setPartition(0)))));
+            .setGroupId("group")
+            .setTopics(Collections.singletonList(new DeleteShareGroupStateRequestData.DeleteStateData()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new DeleteShareGroupStateRequestData.PartitionData()
+                    .setPartition(0)))));
         return new DeleteShareGroupStateRequest.Builder(data).build(version);
     }
 
     private DeleteShareGroupStateResponse createDeleteShareGroupStateResponse() {
         DeleteShareGroupStateResponseData data = new DeleteShareGroupStateResponseData()
-                .setResults(Collections.singletonList(new DeleteShareGroupStateResponseData.DeleteStateResult()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new DeleteShareGroupStateResponseData.PartitionResult()
-                                .setPartition(0)
-                                .setErrorCode(Errors.NONE.code())))));
+            .setResults(Collections.singletonList(new DeleteShareGroupStateResponseData.DeleteStateResult()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new DeleteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(0)
+                    .setErrorCode(Errors.NONE.code())))));
         return new DeleteShareGroupStateResponse(data);
     }
 
     private ReadShareGroupStateSummaryRequest createReadShareGroupStateSummaryRequest(short version) {
         ReadShareGroupStateSummaryRequestData data = new ReadShareGroupStateSummaryRequestData()
-                .setGroupId("group")
-                .setTopics(Collections.singletonList(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new ReadShareGroupStateSummaryRequestData.PartitionData()
-                                .setPartition(0)))));
+            .setGroupId("group")
+            .setTopics(Collections.singletonList(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new ReadShareGroupStateSummaryRequestData.PartitionData()
+                    .setPartition(0)))));
         return new ReadShareGroupStateSummaryRequest.Builder(data).build(version);
     }
 
     private ReadShareGroupStateSummaryResponse createReadShareGroupStateSummaryResponse() {
         ReadShareGroupStateSummaryResponseData data = new ReadShareGroupStateSummaryResponseData()
-                .setResults(Collections.singletonList(new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
-                        .setTopicId(Uuid.randomUuid())
-                        .setPartitions(Collections.singletonList(new ReadShareGroupStateSummaryResponseData.PartitionResult()
-                                .setPartition(0)
-                                .setErrorCode(Errors.NONE.code())
-                                .setStartOffset(0)
-                                .setStateEpoch(0)))));
+            .setResults(Collections.singletonList(new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new ReadShareGroupStateSummaryResponseData.PartitionResult()
+                    .setPartition(0)
+                    .setErrorCode(Errors.NONE.code())
+                    .setStartOffset(0)
+                    .setStateEpoch(0)))));
         return new ReadShareGroupStateSummaryResponse(data);
+    }
+
+    private DescribeShareGroupOffsetsRequest createDescribeShareGroupOffsetsRequest(short version) {
+        DescribeShareGroupOffsetsRequestData data = new DescribeShareGroupOffsetsRequestData()
+            .setGroups(Collections.singletonList(new DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup()
+                .setGroupId("group")
+                .setTopics(Collections.singletonList(new DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestTopic()
+                    .setTopicName("topic-1")
+                    .setPartitions(Collections.singletonList(0))))));
+        return new DescribeShareGroupOffsetsRequest.Builder(data).build(version);
+    }
+
+    private AlterShareGroupOffsetsRequest createAlterShareGroupOffsetsRequest(short version) {
+        AlterShareGroupOffsetsRequestData.AlterShareGroupOffsetsRequestTopicCollection alterShareGroupOffsetsRequestTopics = new AlterShareGroupOffsetsRequestData.AlterShareGroupOffsetsRequestTopicCollection();
+        alterShareGroupOffsetsRequestTopics.add(new AlterShareGroupOffsetsRequestData.AlterShareGroupOffsetsRequestTopic()
+            .setTopicName("topic")
+            .setPartitions(List.of(new AlterShareGroupOffsetsRequestData.AlterShareGroupOffsetsRequestPartition()
+                .setPartitionIndex(0)
+                .setStartOffset(0)))
+        );
+        AlterShareGroupOffsetsRequestData data = new AlterShareGroupOffsetsRequestData()
+            .setGroupId("group")
+            .setTopics(alterShareGroupOffsetsRequestTopics);
+        return new AlterShareGroupOffsetsRequest.Builder(data).build(version);
+    }
+
+    private DeleteShareGroupOffsetsRequest createDeleteShareGroupOffsetsRequest(short version) {
+        DeleteShareGroupOffsetsRequestData data = new DeleteShareGroupOffsetsRequestData()
+            .setGroupId("group")
+            .setTopics(List.of(new DeleteShareGroupOffsetsRequestData.DeleteShareGroupOffsetsRequestTopic()
+                .setTopicName("topic-1")
+                .setPartitions(List.of(0))));
+        return new DeleteShareGroupOffsetsRequest.Builder(data).build(version);
+    }
+
+    private DescribeShareGroupOffsetsResponse createDescribeShareGroupOffsetsResponse() {
+        DescribeShareGroupOffsetsResponseData data = new DescribeShareGroupOffsetsResponseData()
+            .setGroups(Collections.singletonList(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup()
+                .setGroupId("group")
+                .setTopics(Collections.singletonList(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic()
+                .setTopicName("topic-1")
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(Collections.singletonList(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponsePartition()
+                    .setPartitionIndex(0)
+                    .setErrorCode(Errors.NONE.code())
+                    .setStartOffset(0)
+                    .setLeaderEpoch(0)))))));
+        return new DescribeShareGroupOffsetsResponse(data);
+    }
+
+    private AlterShareGroupOffsetsResponse createAlterShareGroupOffsetsResponse() {
+        AlterShareGroupOffsetsResponseData data = new AlterShareGroupOffsetsResponseData()
+            .setResponses(List.of(new AlterShareGroupOffsetsResponseData.AlterShareGroupOffsetsResponseTopic()
+                .setPartitions(List.of(new AlterShareGroupOffsetsResponseData.AlterShareGroupOffsetsResponsePartition()
+                    .setPartitionIndex(0)
+                    .setErrorCode(Errors.NONE.code())))
+                .setTopicName("topic")
+                .setTopicId(Uuid.randomUuid())));
+        return new AlterShareGroupOffsetsResponse(data);
+    }
+
+    private DeleteShareGroupOffsetsResponse createDeleteShareGroupOffsetsResponse() {
+        DeleteShareGroupOffsetsResponseData data = new DeleteShareGroupOffsetsResponseData()
+            .setResponses(List.of(new DeleteShareGroupOffsetsResponseData.DeleteShareGroupOffsetsResponseTopic()
+                .setTopicName("topic-1")
+                .setTopicId(Uuid.randomUuid())
+                .setPartitions(List.of(new DeleteShareGroupOffsetsResponseData.DeleteShareGroupOffsetsResponsePartition()
+                    .setPartitionIndex(0)
+                    .setErrorCode(Errors.NONE.code())))));
+        return new DeleteShareGroupOffsetsResponse(data);
     }
 
     private AbstractRequest createStreamsGroupDescribeRequest(final short version) {
@@ -3988,9 +3816,9 @@ public class RequestResponseTest {
     public void testInvalidSaslHandShakeRequest() {
         AbstractRequest request = new SaslHandshakeRequest.Builder(
                 new SaslHandshakeRequestData().setMechanism("PLAIN")).build();
-        ByteBuffer serializedBytes = request.serialize();
+        ByteBufferAccessor serializedBytes = request.serialize();
         // corrupt the length of the sasl mechanism string
-        serializedBytes.putShort(0, Short.MAX_VALUE);
+        serializedBytes.buffer().putShort(0, Short.MAX_VALUE);
 
         String msg = assertThrows(RuntimeException.class, () -> AbstractRequest.
             parseRequest(request.apiKey(), request.version(), serializedBytes)).getMessage();
@@ -4009,10 +3837,10 @@ public class RequestResponseTest {
         };
         SaslAuthenticateRequestData data = new SaslAuthenticateRequestData().setAuthBytes(b);
         AbstractRequest request = new SaslAuthenticateRequest(data, version);
-        ByteBuffer serializedBytes = request.serialize();
+        ByteBufferAccessor serializedBytes = request.serialize();
 
         // corrupt the length of the bytes array
-        serializedBytes.putInt(0, Integer.MAX_VALUE);
+        serializedBytes.buffer().putInt(0, Integer.MAX_VALUE);
 
         String msg = assertThrows(RuntimeException.class, () -> AbstractRequest.
                 parseRequest(request.apiKey(), request.version(), serializedBytes)).getMessage();
@@ -4041,7 +3869,7 @@ public class RequestResponseTest {
         accessor.flip();
 
         SaslAuthenticateRequest saslAuthenticateRequest = (SaslAuthenticateRequest) AbstractRequest.
-                parseRequest(SASL_AUTHENTICATE, SASL_AUTHENTICATE.latestVersion(), accessor.buffer()).request;
+                parseRequest(SASL_AUTHENTICATE, SASL_AUTHENTICATE.latestVersion(), accessor).request;
         Assertions.assertArrayEquals(authBytes, saslAuthenticateRequest.data().authBytes());
         assertEquals(1, saslAuthenticateRequest.data().unknownTaggedFields().size());
         assertEquals(taggedField, saslAuthenticateRequest.data().unknownTaggedFields().get(0));
@@ -4069,7 +3897,7 @@ public class RequestResponseTest {
         accessor.flip();
 
         String msg = assertThrows(RuntimeException.class, () -> AbstractRequest.
-                parseRequest(SASL_AUTHENTICATE, SASL_AUTHENTICATE.latestVersion(), accessor.buffer())).getMessage();
+                parseRequest(SASL_AUTHENTICATE, SASL_AUTHENTICATE.latestVersion(), accessor)).getMessage();
         assertEquals("Error reading byte array of 32767 byte(s): only 3 byte(s) available", msg);
     }
 }
