@@ -21,7 +21,6 @@ import org.apache.kafka.common.config.AbstractConfig;
 import org.apache.kafka.common.config.ConfigDef;
 import org.apache.kafka.common.record.CompressionType;
 import org.apache.kafka.common.utils.Utils;
-import org.apache.kafka.server.config.ShareCoordinatorConfig;
 
 import java.util.Collections;
 import java.util.HashMap;
@@ -30,7 +29,7 @@ import java.util.Map;
 
 public class ShareCoordinatorTestConfig {
 
-    private static final List<ConfigDef> CONFIG_DEF_LIST = Collections.singletonList(
+    private static final List<ConfigDef> CONFIG_DEF_LIST = List.of(
         ShareCoordinatorConfig.CONFIG_DEF
     );
 
